Decouple commodity from forex via registry-driven rules and ExchangeRateProvider port